Bug 490374 - Enable framework tests for gerrit build job
Change-Id: I4f575a3fbcffc919487f3fe77e9f8ccb29da8427
Signed-off-by: Thomas Watson <tjwatson@us.ibm.com>