@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright (c) 2012 Eclipse Foundation.
+  Copyright (c) 2012, 2016 Eclipse Foundation.
   All rights reserved. This program and the accompanying materials
   are made available under the terms of the Eclipse Distribution License v1.0
   which accompanies this distribution, and is available at
@@ -25,6 +25,8 @@
   <properties>
     <defaultSigning-excludeInnerJars>true</defaultSigning-excludeInnerJars>
     <code.ignoredWarnings>${tests.ignoredWarnings}</code.ignoredWarnings>
+    <testSuite>${project.artifactId}</testSuite>
+    <testClass>org.eclipse.osgi.tests.AutomatedTests</testClass>
   </properties>
 
   <build>
@@ -34,52 +36,57 @@
         <artifactId>tycho-surefire-plugin</artifactId>
         <version>${tycho.version}</version>
         <configuration>
-          <testFramework>org.junit</testFramework>
-          <testSuite>org.eclipse.osgi.tests</testSuite>
-          <testClass>org.eclipse.osgi.tests.AutomatedTests</testClass>
+          <argLine>-Xmx128m -Dosgi.framework.extensions=reference:file:${basedir}/../org.eclipse.osgi.compatibility.plugins/target/org.eclipse.osgi.compatibility.plugins-1.0.0-SNAPSHOT.jar</argLine>
           <dependencies>
             <dependency>
-              <artifactId>org.eclipse.jdt.junit4.runtime</artifactId>
-              <type>eclipse-plugin</type>
-            </dependency>
-            <dependency>
+              <type>p2-installable-unit</type>
               <artifactId>org.eclipse.equinox.event</artifactId>
-              <type>eclipse-plugin</type>
-            </dependency>
-            <dependency>
-              <artifactId>org.eclipse.equinox.ds</artifactId>
-              <type>eclipse-plugin</type>
             </dependency>
           </dependencies>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>target-platform-configuration</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+          <dependency-resolution>
+            <extraRequirements>
+              <requirement>
+                <id>org.eclipse.update.configurator</id>
+                <type>p2-installable-unit</type>
+                <versionRange>0.0.0</versionRange>
+              </requirement>
+              <requirement>
+                <id>org.eclipse.osgi.compatibility.plugins</id>
+                <type>p2-installable-unit</type>
+                <versionRange>0.0.0</versionRange>
+              </requirement>
+              <requirement>
+                <id>org.eclipse.osgi.compatibility.state</id>
+                <type>p2-installable-unit</type>
+                <versionRange>0.0.0</versionRange>
+              </requirement>
+              <requirement>
+                <id>org.eclipse.jdt.junit.runtime</id>
+                <type>p2-installable-unit</type>
+                <versionRange>0.0.0</versionRange>
+              </requirement>
+              <requirement>
+                <id>org.eclipse.jdt.junit4.runtime</id>
+                <type>p2-installable-unit</type>
+                <versionRange>0.0.0</versionRange>
+              </requirement>
+              <requirement>
+                <id>org.eclipse.pde.junit.runtime</id>
+                <type>p2-installable-unit</type>
+                <versionRange>0.0.0</versionRange>
+              </requirement>
+            </extraRequirements>
+          </dependency-resolution>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>osx</id>
-      <activation>
-        <property>
-          <name>java.vendor.url</name>
-          <value>http://www.apple.com/</value>
-        </property>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.eclipse.tycho</groupId>
-              <artifactId>tycho-surefire-plugin</artifactId>
-              <version>${tycho.version}</version>
-              <configuration>
-                <argLine>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</argLine>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-  </profiles>
 
 </project>
